# echobridge

./: pyproject.toml  requirements.txt  setup.py
apps/flask_app/: app.py  nlp_emotion.py  test_api.py
apps/streamlit_app/: app.py
apps/streamlit_app/components/: __init__.py  chat_interface.py  emotion_display.py
data/raw/: README.md
scripts/: download_data.py  evaluate_model.py  generate_datasets.py  train_model.py
src/echobridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/echobridge/data/: __init__.py  augmentation.py  data_loader.py  preprocessing.py
src/echobridge/models/: __init__.py  bert_classifier.py  model_utils.py  spacy_pipeline.py  trainer.py
src/echobridge/utils/: __init__.py  helpers.py  logger.py  validators.py
src/echobridge/visualization/: __init__.py  color_mapper.py  emotion_renderer.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_color_mapper.py  test_preprocessing.py
