[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echobridge"
version = "1.0.0"
description = "Real-Time Emotion-to-Tone Translator for Accessibility"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EchoBridge Team", email = "team@echobridge.dev"}
]
keywords = ["emotion-detection", "accessibility", "nlp", "bert", "autism", "hearing-impaired"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "spacy>=3.7.0",
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]
streamlit = [
    "streamlit>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/echobridge"
Documentation = "https://echobridge.readthedocs.io"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/echobridge --cov-report=html"
